# UnNoiseCompile

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
CZ_Ella/data/: 12-qubit-noise.csv  Filter_data_CZ.csv
CZ_Ella/samples/: CZ_test.ipynb  CZ_test.py  hadamard_noise.py
CZ_Ella/src/: BitFlipper.py  Infidelity.py
EmeraldSimpleTest/: GateInference.ipynb  Inference.ipynb
EmeraldSimpleTest/measdata/: Braket_Qubit_Calibration.json  Post_MeanMode_20260123_180155.json  Post_MeanMode_20260123_230225.json
Tutorial/: Benchmarking on Different Devices.ipynb  Producing2QubitGraphs.ipynb  Tutorial.ipynb  expfuncs.py
Tutorial/data/: Count_Grover.csv  Filter_data.csv  Filter_data_old.csv  Params.csv  Post_Qubit1.csv  Readout_200XQ4.csv  Readout_57CZQ0.csv  Readout_57CZQ1.csv
notebooks/: BitFlip-Error-Addition.ipynb  Braket-test.ipynb  Efficient_DeNoiser.ipynb  Error-BitFlip.ipynb  HowTo_Inference.ipynb  MQT-Circuit-Noise-Sim.ipynb  Measurement-Error-Tutorial.ipynb  Munich-basic.ipynb  Strong-Circuit-Noise-Sim.ipynb  Tensor_Multiply.ipynb  Transpilation_Tutorial.ipynb  basic_noise.ipynb  transpiles.ipynb
notebooks/error_data-L=40000-num_per_shots= 8192/: State0_Post_Qubit0.csv  State0_Post_Qubit1.csv  (+2 more)
samples/: CZ_test.ipynb  Graph_tester.ipynb  Qubit_Data_Simulator.ipynb  effDeNoise_Test.ipynb  hadamard_noise.py
src/: BitFlipper.py  Infidelity.py  MeasureMatrix.py  Qubit_Simulator.py  awsproperties.py  gatesimu.py  graphconnector.py  measfilter.py  splitgatefilter.py  splitmeasfilter.py
(+177 files in other folders)
