[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UnNoiseCompile"
version = "0.1.0"
description = "My data science project"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "jupyter",
    # Add other libraries you use here
]

[tool.setuptools.packages.find]
where = ["src"]  # This tells Python to look inside /src
