[project]
name = "unnoise-compile"
version = "0.1.0"
description = "A package for developing scalable and hardware-aware quantum error inference and compilation to minimise bitflip gate and measurement error."
authors = [
    {name = "Jude Metcalf",email = "209973512+judemetcalf111@users.noreply.github.com"}
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["quantum computing", "quantum error correction", "quantum compilation", "quantum information", "quantum algorithms"]
readme = "README.md"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/judemetcalf111/UnNoiseCompile"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
